--- a/manifest.json
+++ b/manifest.json
@@ -9,45 +9,45 @@
     "orientation": "portrait",
     "icons": [
         {
-          "src": "/Manifest/icons/icon-72x72.png",
+          "src": "/Twittor/Manifest/icons/icon-72x72.png",
           "type": "image/png",
           "sizes": "72x72"
         },
         {
-          "src": "/Manifest/icons/icon-96x96.png",
+          "src": "/Twittor/Manifest/icons/icon-96x96.png",
           "type": "image/png",
           "sizes": "96x96"
         },
         {
-          "src": "/Manifest/icons/icon-128x128.png",
+          "src": "/Twittor/Manifest/icons/icon-128x128.png",
           "type": "image/png",
           "sizes": "128x128"
         },
         {
-          "src": "/Manifest/icons/icon-144x144.png",
+          "src": "/Twittor/Manifest/icons/icon-144x144.png",
           "type": "image/png",
           "sizes": "144x144"
         },
         {
-          "src": "/Manifest/icons/icon-152x152.png",
+          "src": "/Twittor/Manifest/icons/icon-152x152.png",
           "type": "image/png",
           "sizes": "152x152"
         },
         {
-          "src": "/Manifest/icons/icon-192x192.png",
+          "src": "/Twittor/Manifest/icons/icon-192x192.png",
           "type": "image/png",
           "sizes": "192x192"
         },
         {
-          "src": "/Manifest/icons/icon-384x384.png",
+          "src": "/Twittor/Manifest/icons/icon-384x384.png",
           "type": "image/png",
           "sizes": "384x384"
         },
         {
-          "src": "/Manifest/icons/icon-512x512.png",
+          "src": "/Twittor/Manifest/icons/icon-512x512.png",
           "type": "image/png",
           "sizes": "512x512"
         }
   ],
-    "scope": "/"
+    "scope": "/Twittor/"
 }
